--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Required metadata
-sonar.projectKey=org.sonarqube:java-simple-sq-scanner
-sonar.projectName=gmail
-sonar.projectVersion=1.0
+sonar.projectKey=org.sonarqube:java-simple-sq-scanner-sai
+sonar.projectName=gmail1
+sonar.projectVersion=1.1
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
