--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
 sonar.projectKey=org.sonarqube:java-simple-sq-scanner-sai
-sonar.projectName=saikumar007
+sonar.projectName=saikumar0088888
 sonar.projectVersion=1.1
 
 # Comma-separated paths to directories with sources (required)
